<resources>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="img_desc">Images for Apps</string>
    <string name="book_selling">Book Selling</string>
    <string name="Description">Buy and sell boos quickly, safe and locally</string>
    <string name="signIn">SIGN IN USING</string>
    <string name="img_register_facebook">Image for register on facebook</string>
    <string name="img_register_google">Image for register on google</string>

    // Facebook Login
    <string name="facebook_app_id">446760892615954</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb446760892615954</string>

    //Bottom navigation bar
    <string name="bottom_navigation_bar_home">Home</string>
    <string name="bottom_navigation_bar_personal">Personal</string>
    <string name="text_books_popular">Popular</string>
    <string name="text_books_top_selling">Top Selling</string>
    <string name="text_books_new_release">New Release</string>

    //Book
    <string name="img_book">Book Image</string>
    <string name="rate">Rate</string>
    <string name="image_star">image star</string>
    <string name="image_manage_order">image for manage order</string>
    <string name="text_logout">LOG OUT</string>
    <string name="image_profile">image profile</string>

    <string name="text_add_to_cart">ADD TO CART</string>
    <string name="text_item_toolbar_search">Search</string>
    <string name="text_item_toolbar_cart">Cart</string>

    <string name="label_home">homeFragment</string>
    <string name="label_cart">cartFragment</string>
    <string name="label_personal">personalFragment</string>
    <string name="label_home_common">homeCommonFragment</string>
    <string name="label_home_top_selling">homeTopSellingFragment</string>
    <string name="label_home_new_release">homeNewReleaseFragment</string>
    <string name="label_book_detail">bookDetailFragment</string>
    <string name="label_book_collection">bookCollectionFragment</string>
    <string name="label_manage_orders">manageOrdersFragment</string>
    <string name="label_write_review">writeReviewFragment</string>
    <string name="label_account" >accountFragment</string>
    <string name="label_confirm_order">confirmOrderFragment</string>

    <string name="label_error">Error</string>
    <string name="label_no_internet">No Internet Connection</string>
    <string name="label_error_no_data">No Data Available</string>
    <string name="label_app_name">Vogo Book</string>
    <string name="label_book_description">Description</string>
    <string name="label_image_avatar">avatar</string>
    <string name="label_personal_string">Personal</string>
    <string name="log_out">LOG OUT</string>
    <string name="partten_birthday_local">MMM dd, yyyy</string>
    <string name="label_go_shopping">Let\'s go shopping</string>
    <string name="label_image_cart">cart image</string>
    <string name="label_notice_no_order">You don\'t have any order</string>
    <string name="label_order_id_text">Code order:\u0020</string>
    <string name="label_order_date_text">Order date:\u0020</string>
    <string name="label_order_status_text">Status:\u0020 </string>
    <string name="label_payment_type">Payment</string>
    <string name="label_order_information">Order\'s Information</string>
    <string name="label_total_price">Total</string>
    <string name="label_order">Order</string>
    <string name="label_order_detail">orderDetailFragment</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="label_success">Success</string>
    <string name="submit_review_successfully">Your review submit successfully</string>
    <string name="label_failure">Failure</string>
    <string name="cannot_process_request">Something went wrong from server</string>
    <string name="no_search_result">No result search</string>
    <string name="label_book">BOOK</string>
    <string name="label_screen_cart">Cart</string>
    <string name="label_cart_price">Cart_Price</string>
    <string name="label_maximum_book">The maximum number of books allowed is 5</string>
    <string name="label_not_enough_book">Not enough this book in stock</string>
    <string name="submit_order_successfully">Your order submit successfully</string>
    <string name="cancel_order_successfully">Cancel order successfully!</string>
</resources>
