<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="2dp"
    android:id="@+id/item_order">

    <TextView
        android:id="@+id/text_view_order_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLines="2"
        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_view_order_code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order_id_text"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_order_name"/>

    <TextView
        android:id="@+id/text_view_order_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:alpha="0.8"
        android:textSize="16sp"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@id/text_view_order_code_text"
        app:layout_constraintTop_toBottomOf="@id/text_view_order_name" />

    <TextView
        android:id="@+id/text_view_order_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:alpha="0.8"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_order_code_text"
        android:text="@string/label_order_date_text"/>

    <TextView
        android:id="@+id/text_view_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:alpha="0.8"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/text_view_order_date_text"
        app:layout_constraintTop_toBottomOf="@id/text_view_order_code_text"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/text_view_order_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:alpha="0.8"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_order_date_text"
        android:text="@string/label_order_status_text"/>

    <TextView
        android:id="@+id/text_view_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:alpha="0.8"
        android:textSize="16sp"
        android:singleLine="true"
        app:layout_constraintLeft_toRightOf="@id/text_view_order_status_text"
        app:layout_constraintTop_toBottomOf="@id/text_view_order_date_text"/>

    <View android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_order_status"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>