<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_view_order_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_order_id_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_order_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/text_view_order_code_text"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="0123456789"/>

        <TextView
            android:id="@+id/text_view_order_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_order_code_text"
            android:text="@string/label_order_date_text"/>

        <TextView
            android:id="@+id/text_view_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@id/text_view_order_date_text"
            app:layout_constraintTop_toBottomOf="@id/text_view_order_code_text"
            android:text="11-12-2019"/>

        <TextView
            android:id="@+id/text_view_order_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_order_date_text"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:layout_marginTop="10dp"
            android:text="@string/label_order_status_text"/>

        <TextView
            android:id="@+id/text_view_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/text_view_order_status_text"
            app:layout_constraintTop_toBottomOf="@id/text_view_order_date_text"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:layout_marginTop="10dp"
            android:text="OK"/>

        <View
            android:id="@+id/view_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="15dp"
            android:alpha="0.8"
            app:layout_constraintTop_toBottomOf="@+id/text_view_order_status"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/text_view_payment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_border"
            android:text="@string/label_payment_type"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_payment_text"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:layout_marginTop="10dp"
            android:text="Cast"/>

        <View
            android:id="@+id/view_border_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:alpha="0.8"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_payment"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/text_view_order_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_information"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_border_2"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_order_information"
            android:layout_marginTop="10dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_books"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:background="@drawable/top_border_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_order"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorPrimary"
                android:text="Total"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/text_view_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="$789"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_layout_color"
            android:text="Cancel"
            android:textSize="@dimen/text_action_button"
            android:textStyle="bold"
            android:textColor="@color/windowBackground" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>